[gd_scene load_steps=3 format=2]

[ext_resource path="res://option/options.gd" type="Script" id=1]
[ext_resource path="res://option/robotpreveiw.tscn" type="PackedScene" id=2]

[node name="options_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer"]
margin_right = 234.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="reset" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 234.0
margin_bottom = 124.0
text = "Reset"

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 234.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 100 )

[node name="accel_label" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 234.0
margin_bottom = 247.0
text = "accelaration"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="accel_slider" type="HSlider" parent="VBoxContainer"]
margin_top = 251.0
margin_right = 234.0
margin_bottom = 267.0
min_value = 0.1
max_value = 30.0
step = 0.1
value = 2.0

[node name="accel_val_label" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 271.0
margin_right = 234.0
margin_bottom = 286.0
text = "accelaration:"
fit_content_height = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 234.0
margin_bottom = 330.0
rect_min_size = Vector2( 100, 40 )

[node name="deccel_label" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 334.0
margin_right = 234.0
margin_bottom = 349.0
text = "deccelaration"
fit_content_height = true

[node name="deccel_slider" type="HSlider" parent="VBoxContainer"]
margin_top = 353.0
margin_right = 234.0
margin_bottom = 369.0
min_value = 0.1
max_value = 30.0
step = 0.1
value = 2.0

[node name="deccel_val_label" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 373.0
margin_right = 234.0
margin_bottom = 388.0
text = "deccelaration:"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 392.0
margin_right = 234.0
margin_bottom = 432.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_speed_label" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 436.0
margin_right = 234.0
margin_bottom = 451.0
text = "max speed"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_speed_slider" type="HSlider" parent="VBoxContainer"]
margin_top = 455.0
margin_right = 234.0
margin_bottom = 471.0
min_value = 1.0
max_value = 30.0
value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_speed_val_label" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 475.0
margin_right = 234.0
margin_bottom = 490.0
text = "max speed:"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
margin_top = 494.0
margin_right = 234.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn_speed_multiplyer_label" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 538.0
margin_right = 234.0
margin_bottom = 553.0
text = "turn speed multiplyer"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn_speed_multiplyer_slider" type="HSlider" parent="VBoxContainer"]
margin_top = 557.0
margin_right = 234.0
margin_bottom = 573.0
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn_speed_multiplyer_val" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 577.0
margin_right = 234.0
margin_bottom = 592.0
text = "turn speed multiplyer:"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer"]
margin_top = 596.0
margin_right = 234.0
margin_bottom = 696.0
rect_min_size = Vector2( 0, 100 )

[node name="rumble_toggle" type="CheckButton" parent="VBoxContainer"]
margin_top = 700.0
margin_right = 234.0
margin_bottom = 740.0
pressed = true
text = "Rumble"
align = 1

[node name="particals_toggle" type="CheckButton" parent="VBoxContainer"]
margin_top = 744.0
margin_right = 234.0
margin_bottom = 784.0
text = "Particles"
align = 1

[node name="vr_toggle" type="CheckButton" parent="VBoxContainer"]
margin_top = 788.0
margin_right = 234.0
margin_bottom = 828.0
text = "VR mode (experimental)"
align = 1

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 832.0
margin_right = 234.0
margin_bottom = 852.0
text = "quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 400.0
margin_top = 100.0
margin_right = 1360.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 960, 540 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="robotpreveiw" parent="ViewportContainer/Viewport" instance=ExtResource( 2 )]

[connection signal="pressed" from="VBoxContainer/reset" to="." method="_on_reset_pressed"]
[connection signal="value_changed" from="VBoxContainer/accel_slider" to="." method="_on_accel_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/deccel_slider" to="." method="_on_deccel_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/max_speed_slider" to="." method="_on_max_speed_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/turn_speed_multiplyer_slider" to="." method="_on_turn_speed_multiplyer_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/rumble_toggle" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="VBoxContainer/particals_toggle" to="." method="_on_particals_toggle_toggled"]
[connection signal="toggled" from="VBoxContainer/vr_toggle" to="." method="_on_vr_toggle_toggled"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
